feat: working pipeline for single zone analysis (be careful, the multiple analysis over Grenoble might no longer work following the changes)

--- a/notebooks/00.00-Brouillon.ipynb
+++ b/notebooks/00.00-Brouillon.ipynb
@@ -530,11 +530,47 @@
     "data_zone_urbaine = load_json_file(\"/mnt/mydisk/Projects/plu/data/raw/Grenoble/Zone Urbaines.json\")\n",
     "extract_markdown_text(data_zone_urbaine)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "with open(\"/mnt/mydisk/Projects/plu/config/plu_tree.yaml\", \"r\") as f:\n",
+    "    tree = yaml.safe_load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zones_urbaines_mixtes\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in tree[\"grenoble\"]:\n",
+    "    print(f\"{key}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "plu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
